\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{Version 3.2.3}{
\itemize{
 \item{Fix for when applying blacklists after counting with non-default contrasts.}
}
}

\section{Version 3.2}{
\itemize{
 \item{New type of plot: dba.plotProfile()}
 \item{Can mix single-end and paired-end bam files}
 \item{Various bug fixes}
}
}

\section{Version 3.0}{
\itemize{
\item{
This is a major release of DiffBind and the new version will be 3.0.

The main upgrade involves how the modelling and normalization are done. 
DiffBind now supports models and contrasts of arbitrary complexity 
using either/both DESeq2 or/and edgeR,
as well as a myriad of normalization options.

NB:

The previous methods for modelling are maintained for backward compatibility, 
however they are not the default. 
To repeat earlier analyses, dba.contrast() must be 
called explicitly with design=FALSE.
See ?DiffBind3 for more information.

The default mode for dba.count() is now to center around summits 
(resulting in 401bp intervals). 
To to avoid recentering around summits as was the previous default, 
set summits=FALSE (or to a more appropriate value).

Normalization options have been moved from dba.analyze() 
to the new interface function dba.normalize().
Any non-default normalization options must be specified using dba.normalize().
}
 \item{Summary of Changes:}
   \itemize{
       \item{dba.analyze():}
          \itemize{
             \item{Automatic mode can start at any point, including from a 
                   sample sheet, and continue default analysis}
              \item{Remove normalization options bSubControl, bFullLibrarySize,
                    filter, and filterFun from dba.analyze(), 
                    now set in dba.normalize().}
              \item{Add support to analyze using full model design formula.}
              \item{Update DESeq2 analysis method.}
              \item{Update edgeR analysis method.}