@@ -108,7 +108,7 @@ pv.DBAplotMA <- function(pv,contrast,method='edgeR',bMA=TRUE,bXY=FALSE,th=0.05,
             ymax <- yrange[2]
           }
           
-          constr <- pv.getContrastString(conrec)
+          constr <- pv.getContrastString(conrec,bFlip)
           
           if(is(res,"list")) {
             mainstr <- constr
@@ -198,7 +198,7 @@ pv.DBAplotMA <- function(pv,contrast,method='edgeR',bMA=TRUE,bXY=FALSE,th=0.05,
         xymin <- max(xymin,0)
         xymax <- max(xmax,ymax)
         
-        constr <- pv.getContrastString(conrec)
+        constr <- pv.getContrastString(conrec,bFlip)
         
         if(is(res,"list")) {
           mainstr <- constr
@@ -294,7 +294,7 @@ pv.DBAplotVolcano <- function(pv,contrast,method='edgeR', th=0.05,
         colnames(res)[1] <- "SiteNum"
         res[idx,1] <- 1:sum(idx)
         
-        constr <- pv.getContrastString(conrec)
+        constr <- pv.getContrastString(conrec,bFlip)
         plotTitle <- sprintf('%s Contrast: %s  [%s %s<=%1.3f',
                              facname, constr,sum(idx),tstr,th)
         if(fold>0) {
