@@ -285,7 +285,11 @@ pv.DBAreport <- function(pv,contrast=1,method='edgeR',th=0.05,bUsePval=FALSE,
       fold <- con1 - con2
     } else {
       fold <- data$fold[keep]
+      if(bFlip == TRUE) {
+        fold <- fold * -1
+      }
     }
+
     data <- cbind(pv.getsites(pv,siteids),conc,con1,con2,fold,data[keep,c(pvCol,fdrCol)])
     conc1 <- sprintf('Conc_%s',name1)
     conc2 <- sprintf('Conc_%s',name2)
@@ -738,7 +742,7 @@ pv.doResults <- function(res,DBA,contrast,method,th,bUsePval,
   
   rep <- rep[order(as.integer(rownames(rep))),]
   
-  id <- pv.getContrastString(DBA$contrast[[contrast]]) 
+  id <- pv.getContrastString(DBA$contrast[[contrast]],bFlip) 
   
   if(bUsePval) {
     scores <- rep$"p-value"
